Added send mail reservation.

--- a/src/main/resources/i18n/messages_es.properties
+++ b/src/main/resources/i18n/messages_es.properties
@@ -20,3 +20,6 @@ email.reset.greeting=Estimado {0}
 email.reset.text1=Se ha solicitado el reinicio de contraseña para su cuenta de ReservaSalas, por favor, haga clic en el enlace de abajo para reiniciarla:
 email.reset.text2=Saludos,
 
+# Send e-mail Reservación
+email.send.title=Reservación de Sala
+
